# fastapi-experiment

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci-cd.yaml
src/app/core/: config.py
src/app/db/: base.py  session.py
src/app/db/migrations/: env.py
src/app/db/models/ecommerce/: __init__.py  ecommerce.py
terraform/: main.tf  outputs.tf  variables.tf
