[project]
name = "fastapi-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "polars>=1.30.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
ci = [
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
test = [
    "mypy>=1.16.0",
    "pytest>=8.3.5",
]

# Ruff
[tool.ruff.lint]
# Add the isort
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402"]
