[project]
name = "fastapi-experiment"
version = "0.1.0"
description = "Learning FastAPI deployment on AWS with Terraform and Docker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.118.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.43",
]

[project.optional-dependencies]
ci = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]
test = ["pytest>=8.4.2", "pytest-asyncio>=1.2.0", "pytest-cov>=7.0.0"]

# Ruff
[tool.ruff]
line-length = 100
target-version = "py312"
fix = true
unsafe-fixes = false

# Add the isort
[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "E501", # Line to long handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E402", # imports not at top - common in __init__.py
    "F401", # unused imports allowed - often re-exports
    "F403", # star imports - used for clean package exports
]
"src/app/db/models/*.py" = ["F821"]


# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",                        # Verbose: show each test name
    "--strict-markers",          # Fail on typos in @pytest.mark.* decorators
    "--strict-config",           # Fail on pytest config warnings
    "--cov=app",                 # Measure coverage for the app package
    "--cov-report=term-missing", # Show which lines aren't covered
    "--cov-report=html",         # Generate htmlcov/index.html for detailed view
]
